# hive

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml  lint.yml
docs/: README.md  features.md  roadmap.md
docs/agent/: README.md
docs/archive/: 2026-03-09-hive-code-architecture.md  2026-03-09-open-questions.md
docs/cli/: README.md
docs/commands/: README.md
docs/config/: README.md
docs/dashboard/: README.md
docs/guides/: .creating-a-worker.md.swp  creating-a-worker.md  troubleshooting.md  worker-internals.md
docs/plans/: 2026-03-09-hive-architecture-design.md  2026-03-10-design-review.md  SPEC.md
docs/reference/: SPEC.md  architecture.md
docs/scheduling/: README.md
skills/add-command/: SKILL.md
skills/add-command/evals/: evals.json
skills/add-schedule/: SKILL.md
skills/add-schedule/evals/: evals.json
skills/create-worker/: SKILL.md
skills/create-worker/evals/: evals.json
skills/setup-dashboard/: SKILL.md
skills/setup-dashboard/evals/: evals.json
src/hive/: __init__.py
src/hive/cli/: app.py
src/hive/comb/: cells.py  default_app.py  server.py  streamlit_helpers.py  themes.py
src/hive/shared/: config.py  models.py  registry.py  supervisor.py
tests/: test_cli.py
tests/comb/: test_cells.py  test_server.py  test_themes.py
tests/shared/: test_config.py  test_models.py  test_registry.py  test_supervisor.py
tests/worker/: test_agent.py  test_builtin_tools.py  test_builtins.py  test_commands.py  test_runtime.py  test_scheduler.py  test_tui.py  test_usage.py  test_utils.py
(+14 files in other folders)
