[project]
name = "hive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "caeochoa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hive = "hive:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
